--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@ layout: default
 <div class="page clearfix" index>
     <div class="left">
         <h1>Welcome to NK's Blog!</h1>
-        <small></small>
+        <small>The blog is meant to be about Knowlegde sharing about my (work/study) activities, Data Science, IT, How-tos, ...</small>
+		<small>In October 2019 I decided to start this weblog as a test for a first weblog</small>
+	    <small>For the moment being the blog will be read only, in the future might add comment functionality. </small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
