removed old finished posts

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>Welcome to NK's Blog!</h1>
-        <small>The blog is meant to be about Knowlegde sharing about my (work/study) activities, Data Science, IT, How-tos, ...</small>
-		<small>In October 2019 I decided to start this weblog as a test for a first weblog</small>
-	    <small>For the moment being the blog will be read only, in the future might add comment functionality. </small>
+        <h1>Welcome to Nils Kuhler's Blog!</h1>
+        <small><BR><small>
+		<small>In October 2019 I decided to start this weblog test as my first weblog.</small>
+		<small>This blog is meant to be/will be about: </small>
+		<small>
+		<ul>
+		     <li>Knowlegde sharing that I can share on IT subjects, like Data Science, ML, DL, AI, Python and Java Developement, ...</li>
+			 <li>Recording my activities in IT that I can share, like completed courses, studies, ... </li>
+			 <li>IT subject summaries, IT subject best practices, IT subject How-to Descriptions, ...</li>
+			 <li>Anything relevant in the IT domain to share</li>
+			 <li>...</li>
+		</ul>
+		</small>
+	    <small>For the moment being the blog will be read only, in the future might add other functionality, like the possibility to add comments. If you any have comments or feedback please link me at linked in. </small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
