removed incorrect html in index

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="page clearfix" index>
     <div class="left">
         <h1>Welcome to Nils Kuhler's Blog!</h1>
-        <small><BR><small>
+		</BR>
 		<small>In October 2019 I decided to start this weblog test as my first weblog.</small>
 		<small>This blog is meant to be/will be about: </small>
 		<small>
@@ -18,7 +18,7 @@ layout: default
 		</ul>
 		</small>
 	    <small>For the moment being the blog will be read only, in the future might add other functionality, like the possibility to add comments. If you any have comments or feedback please link me at linked in. </small>
-        <hr>
+        </BR>
         <ul>
             {% for post in paginator.posts %}
               <li>
@@ -156,7 +156,7 @@ layout: default
                 </div>
             </div>
 
-            <!-- <div class="side">
+            <div class="side">
                 <div>
                     <i class="fa fa-external-link"></i>
                     Links
@@ -164,9 +164,9 @@ layout: default
                 <ul  class="content-ul">
 
                 </ul>
-            </div> -->
+            </div>
         </div>
     </div>
 </div>
-<!-- <script src="{{ "/js/scroll.min.js " | prepend: site.baseurl }}" charset="utf-8"></script> -->
-<!-- <script src="{{ "/js/pageContent.js " | prepend: site.baseurl }}" charset="utf-8"></script> -->
+<script src="{{ "/js/scroll.min.js " | prepend: site.baseurl }}" charset="utf-8"></script>
+<script src="{{ "/js/pageContent.js " | prepend: site.baseurl }}" charset="utf-8"></script>
