changed course table so it displays nice on mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 			 <li>...</li>
 		</ul>
 		</small>
-	    <small>For the moment being the blog will be read only, in the future might add other functionality, like the possibility to add comments. If you any have comments or feedback please link me at linked in. </small>
+	    <small>I try to make this blog max mobile friendly. For the moment being the blog will be read only, in the future might add other functionality, like the possibility to add comments. If you any have comments or feedback please link me at linked in. </small>
         </BR>
         <ul>
             {% for post in paginator.posts %}
